--- a/app/includes/nav.html
+++ b/app/includes/nav.html
@@ -1,7 +1,14 @@
 <header>
 	<a href="index.html" class="logo" title="Return home">
-		<img src="images/logo.svg" alt="Ami Reynoso">
+		<img src="images/logo.svg" class="svg" alt="Ami Reynoso">
 	</a>
+
+	<div class="menu-trigger">
+		<input type="checkbox" id="menu">
+		<label for="menu">
+			<span></span>
+		</label>
+	</div>
 
 	<nav role="navigation">
 	  <ul>
