--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -296,7 +296,7 @@ header {
         transition: transform .3s ease-in-out, opacity .3s ease;
         
         &:hover {
-          transform: translate3d(-.5em, 0, 0);
+          @media screen and (min-width: $screen-sm-min) { transform: translate3d(-.5em, 0, 0); }
           opacity: .7;
         }
       }
@@ -324,7 +324,7 @@ header {
 
 main {
   @media screen and (max-width: $screen-xs-max) {
-    margin-top: 6em;
+    margin-top: 8em;
   }
   @media screen and (min-width: $screen-sm-min) {
     position: absolute;
@@ -335,6 +335,29 @@ main {
   p {
     font-size: 1.4em;
     margin: .5em 0;
+
+    &.lead { font-size: 1.6em; }
+  }
+
+  .social {
+    margin-top: 2em;
+    li {
+      display: inline-block;
+      margin-right: 1em;
+      
+      a {
+        color: transparentize($text, .5);
+        display: block;
+        font-size: 1.4em;
+        transition: transform .3s ease,
+          color .3s ease;
+        
+        &:hover {
+          color: transparentize($text, .2);
+          transform: scale(1.1);
+        }
+      }
+    }
   }
 
   .button {
@@ -414,27 +437,6 @@ main {
     font-weight: 400;
     margin-top: 1em;
   }
-
-  .social {
-    margin-top: 2em;
-    li {
-      display: inline-block;
-      margin-right: 1em;
-      
-      a {
-        color: transparentize($text, .5);
-        display: block;
-        font-size: 1.4em;
-        transition: transform .3s ease,
-          color .3s ease;
-        
-        &:hover {
-          color: transparentize($text, .2);
-          transform: scale(1.1);
-        }
-      }
-    }
-  }
 }
 
 // Modifier: WORKS
@@ -451,6 +453,24 @@ main {
 .section-about {
   background-color: $bg-about;
 
+  &:before {
+    left: 35%;
+    top: 10%;
+    width: 50%;
+
+    @media screen and (min-width: $screen-sm-min) {
+      top: 25%;
+      left: 40%;
+      width: 50%;
+    }
+
+    @media screen and (min-width: $screen-md-min) {
+      top: 35%;
+      left: 48%;
+      background-color: transparentize($text, .5);
+    }
+  }
+
   main {
     position: static;
   }
@@ -466,6 +486,26 @@ main {
 .section-contact {
   background-color: $bg-contact;
 
+  &:before {
+    left: 35%;
+    width: 50%;
+    top: 25%;
+
+    @media screen and (min-width: $screen-sm-min) {
+      left: 35%;
+      top: 45%;
+    }
+
+    @media screen and (min-width: $screen-md-min) {
+      top: 40%;
+    }
+  }
+
+  p {
+    line-height: 1.4;
+  }
+
+  .email { font-weight: 400; }
 }
 
 // Body styles
