--- a/app/layouts/default.html
+++ b/app/layouts/default.html
@@ -1,5 +1,5 @@
 {% include "includes/header.html" %}
-  <body class="section-{% block seccion %}{% endblock %}">
+  <body class="section-{% block seccion %}{% endblock %} is-loading">
     {% include "includes/loading.html" %}
 
     {% include "includes/nav.html" %}
